/* HostFrequencyScaler.proto: describes host specific CPU frquency scaling policy objects
 *
 * Author: Ghazanfar Ali <ghazanfar.ali@ttu.edu>, Kevin Pelzel <kevinpelzel22@gmail.com>;J. Lowell Wofford <lowell@lanl.gov>
 *
 * This software is open source software available under the BSD-3 license.
 * Copyright (c) 2019, Triad National Security, LLC
 * See LICENSE file for details.
 */

syntax = "proto3";
package HostFrequencyScaler;
option go_package = ".;hostfrequencyscaler";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.messagename_all) = true;

message Scaler {
    enum ScalerState {
        NONE = 0;
        POWER_SAVE = 1;
        PERFORMANCE = 2;
        SCHEDUTIL = 3;
                
    }
    ScalerState state = 1;
    
}